75% width for blog images

--- a/content/letsplay/game1/game1_2.mdx
+++ b/content/letsplay/game1/game1_2.mdx
@@ -10,4 +10,7 @@ Let's play the new game! 🐶
 
 ![main menu](https://dwpiudeka8xd1.cloudfront.net/elin/20250930194249_1.jpg)
 
+![main menu](https://dwpiudeka8xd1.cloudfront.net/elin/20250930194249_1.jpg "100")
+
+
 <TimeStamp date={lastUpdated} />
