remove placeholder pages

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -28,14 +28,11 @@ export const lastUpdated = '27 Oct 2025'
 
 ## Blog pages
 
-* 🚧 [Let's Play Game 1](letsplay/game1/)
-
-* 🚧 [Let's Play Game 2](letsplay/game2/)
+* 🚧 [Let's Play Europa Universalis V - Hungary](letsplay/EU5/Hungary/)
 
 * [NAS Building Log](nas/)
 
 * [Coding Playground](playground/clocks/)
-
 
 <TimeStamp date={lastUpdated} />
 
