centre sub and other fixes

--- a/content/letsplay/EU5/Hungary/EU5_H_1.mdx
+++ b/content/letsplay/EU5/Hungary/EU5_H_1.mdx
@@ -4,9 +4,10 @@ export const lastUpdated = '31 Dec 9999'
 
 ## **Chapter 1 — Start!**
 ![main menu](https://dwpiudeka8xd1.cloudfront.net/eu5/20251104205848_1.jpg "100")
-It’s our **first run in EU5**, so naturally we look at the list of _recommended countries_. Among Norway, Castile, the usual newcomers’ favorites… and then one suggestion stands out.
+It's our **first run in EU5**, so naturally we look at the list of _recommended countries_.
+Among Norway, Castile, the usual newcomers' favorites… and then one suggestion stands out.
 ![choice](https://dwpiudeka8xd1.cloudfront.net/eu5/20251104205959_1.jpg)
-**Kingdom of Hungary** —at least in our minds— _“the best beginner learning country!”_  
+**Kingdom of Hungary** —at least in our minds— _“the best beginner learning country!”_
 
 And as if fate agreed, [the official EU5 quiz](https://www.paradoxinteractive.com/games/europa-universalis-v/eu5-quiz) we took beforehand also pointed us toward Hungary—sealing our choice before the campaign even began.
 
@@ -15,8 +16,8 @@ And as if fate agreed, [the official EU5 quiz](https://www.paradoxinteractive.co
 ### **The First Thing We See**
 ![Ninety-five_Theses](https://dwpiudeka8xd1.cloudfront.net/eu5/20251104210107_1.jpg)
 The loading screen greets us with a gorgeous illustration of **Martin Luther nailing the Ninety-five Theses** to the church door.\
-It’s just a loading screen, yet the artwork is detailed enough to give the game a pleasantly thoughtful first impression.\
-(Also, if you’re curious about the historical moment: [wikipedia/Ninety-five_Theses](https://en.wikipedia.org/wiki/Ninety-five_Theses) )
+It's just a loading screen, yet the artwork is detailed enough to give the game a pleasantly thoughtful first impression.\
+(Also, if you're curious about the historical moment: [wikipedia/Ninety-five_Theses](https://en.wikipedia.org/wiki/Ninety-five_Theses) )
 
 
 ## **Welcome to Europa Universalis V!**
@@ -26,19 +27,21 @@ It’s just a loading screen, yet the artwork is detailed enough to give the gam
 ### **Basic Tutorial: The Budget**
 ![Economy](https://dwpiudeka8xd1.cloudfront.net/eu5/20251104210945_1.jpg)
 
-<sub>Small UI typo spotted: on the third line of the Taxes box, “extract” appears instead of “exact.”  
-Always fun to catch these early-game quirks. 乾杯～!（´▽`) [todu](http:www.baidu.com)</sub>
+<MDXSub>
+Small UI typo spotted: on the third line of the Taxes box, “exact” appears instead of “extract”.
+Always fun to catch these early-game quirks. 乾杯～!（´▽`）
+</MDXSub>
 
 
-The tutorial kicks off with the economy - which feels appropriate for a Paradox game.  
+The tutorial kicks off with the economy - which feels appropriate for a Paradox game.\
 First lesson: **money is complicated**.
 
 
 * Every month, your budget recalculates.
-    
+
 * You _can_ mint money… but mint too much and _inflation says hello_.
-    
-* Each location produces money through economic activity → estates extract wealth → the crown taxes the estates → we get paid. 
+
+* Each location produces money through economic activity → estates extract wealth → the crown taxes the estates → we get paid.
 
 On the top left you can see the **four estates**: Nobility Tax, Clergy Tax, Burghers Tax, and Commoners Tax.
 They basically represent the four competing social classes… all of whom want something from us.
@@ -48,8 +51,8 @@ On the left panel we get our first look at the population breakdown. Their influ
 12,000 nobles have 40% political power.
 The crown (us!) has 28%, not terrible, but clearly the nobility run the show… for now.
 
-Meanwhile, the upper-right panel displays our **monthly expenses**: Our court (to preserve legitimacy), Our army and forts, Diplomacy, Stability. 
-As Hungary, we avoid naval expenses entirely since we’re landlocked (yay!?), though at this early stage we also lack a true standing army, relying instead on levies as most countries did at the time.
+Meanwhile, the upper-right panel displays our **monthly expenses**: Our court (to preserve legitimacy), Our army and forts, Diplomacy, Stability.
+As Hungary, we avoid naval expenses entirely since we're landlocked (yay!?), though at this early stage we also lack a true standing army, relying instead on levies as most countries did at the time.
 
 
 ![recap of eco](https://dwpiudeka8xd1.cloudfront.net/eu5/20251104211456_1.jpg)
@@ -60,18 +63,18 @@ As Hungary, we avoid naval expenses entirely since we’re landlocked (yay!?), t
 
 Next, we inspect our capital: **Buda**, the heart of Hungary.
 ![Buda](https://dwpiudeka8xd1.cloudfront.net/eu5/20251104214652_1.jpg)
-We see the six population types working in different buildings.  
-Nobles don’t work (surprise), and peasants just work the fields, so they don’t need buildings.
+We see the six population types working in different buildings.
+Nobles don't work (surprise), and peasants just work the fields, so they don't need buildings.
 
-Every location also has an **RGO**—a Resource Gathering Operation.  
-Buda’s RGO is wine.
+Every location also has an **RGO**—a Resource Gathering Operation.
+Buda's RGO is wine.
 ![RGO](https://dwpiudeka8xd1.cloudfront.net/eu5/20251104214939_1.jpg)
-**2,000 people making wine.**  
-_Excellent. We approve this national priority._  
+**2,000 people making wine.**\
+_Excellent. We approve this national priority._\
 Glug glug~
 
 ![recap](https://dwpiudeka8xd1.cloudfront.net/eu5/20251104215739_1.jpg)
-The tutorial recaps the whole loop, but we’ll worry about the full economic cycle later. For now, our priority is straightforward: keep Buda happy, keep the wine flowing, and slowly shape Hungary into something respectable~
+The tutorial recaps the whole loop, but we'll worry about the full economic cycle later. For now, our priority is straightforward: keep Buda happy, keep the wine flowing, and slowly shape Hungary into something respectable~
 
 * * *
 
