move to new url

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -10,7 +10,7 @@ export const lastUpdated = '27 Oct 2025'
 
 <div
     className="hero-wrapper"
-    style={{ '--hero-image': "url('/blog/images/hero.png')" }}
+    style={{ '--hero-image': "url('/images/hero.png')" }}
 >
     <div className="hero-wrapper__content">
         <h1 style={{ fontSize: 'clamp(2.5rem, 5vw, 4rem)', fontWeight:'600', marginBottom: '1rem' }}>
